--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,11 @@
       <scope>test</scope>
     </dependency>
 
+	<dependency>
+	  <groupId>com.fasterxml.jackson.core</groupId>
+	  <artifactId>jackson-core</artifactId>
+	  <version>2.6.1</version>
+	</dependency>
   </dependencies>
 
   <build>
