--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>xebium</artifactId>
   <groupId>com.xebia.incubator</groupId>
-  <version>0.14-SNAPSHOT</version>
+  <version>0.15.01-SNAPSHOT</version>
   <name>Xebium</name>
   <packaging>jar</packaging>
 
@@ -19,6 +19,19 @@
   <description>
     A Selenium2 fixture for FitNesse.
   </description>
+
+  <distributionManagement>
+    <repository>
+      <id>releases</id>
+      <name>Rabobank Corporate Releases</name>
+      <url>https://maven.rabobank.nl/nexus/content/repositories/investment-release</url>
+    </repository>
+    <snapshotRepository>
+      <id>snapshot</id>
+      <name>Rabobank Corporate Snapshots</name>
+      <url>https://maven.rabobank.nl/nexus/content/repositories/investment-snapshots</url>
+    </snapshotRepository>
+  </distributionManagement>
 
   <licenses>
     <license>
@@ -29,7 +42,7 @@
   </licenses>
 
   <properties>
-    <selenium.version>2.52.0</selenium.version>
+    <selenium.version>2.53.1</selenium.version>
     <fitnesse.version>20151230</fitnesse.version>
     <fitnesse.port>8000</fitnesse.port>
     <fitnesse.sut.port>8001</fitnesse.sut.port>
